cluster/blog/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: blog
spec:
  selector:
    app: blog
  ports:
  - protocol: TCP
    port: 8000
